--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 .slider{
-    width: 95%;
+    width: 95vw;
     margin: auto;
     overflow: hidden
 }
@@ -21,7 +21,7 @@
 
 .slider img{
     width: 100%;
-    height: 800px;
+    height: 50vh;
 }
 
 @keyframes cambio{
